--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ header {
 }
 
 .skills section{
+  text-align:center;
 max-width:700px;
 margin:0 auto;
 padding:10px 0;
@@ -228,4 +229,5 @@ body.dark footer {
 
 body.dark #themeToggle {
   border-color: #00bcd4;
+
 }
